css/main.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
@font-face {
    font-family: "Vibes";
    src: url('../assets/fonts/GreatVibes-Regular.ttf');
}
:root {
    --primary-color: #B39DDB;
    --secondary-color: #a688dde0;
    --bg-color: rgb(216, 199, 247);
    --dark-gray: #615a5a;
    --off-white: #f3f4f6;
}
*{
    box-sizing: border-box;
    padding: 0;
}
.site-header{
    min-height: 80vh;
    display: flex;
    align-items: center;
    padding: 50px 0px;
    width: 90%;
    margin: auto;
}
.hamburger{
    display: none;
    pointer-events: none;
    overflow-x: hidden;
  }
.profile{
    /* box-shadow:var(--dark-gray) 2px 5px 5px;
    border-radius: 50%; */
    height: 350px;
}
.-row{
    flex-wrap: wrap;
    display: flex;
    box-sizing: border-box;
    -ms-flex-wrap: wrap;
    margin-right: -15px;
    margin-left: -15px;
}
.col{
    flex: 1 1 calc(33.33% - 20px);
    padding: 4.5rem;
    margin: auto;
}
.-title{
    font-size: 2em;
}
.about-item{
    border-left: 2px solid var(--primary-color);
    padding: 0 0 20px 20px;
    margin-top: -2px;
    position: relative;
}
.about-section h5{
    background: linear-gradient(120deg,var(--secondary-color),var(--primary-color));
    box-shadow:var(--dark-gray) 2px 2px 5px;
    color: ivory;
    padding: 15px;
    display: block;
    margin: 0.5rem;
    min-width: 200px;
}
.about-section h3{
    text-transform: uppercase;
    font-size: 18px;
    font-weight: 600;
}
.about-section li{
    overflow-wrap: break-word;
}
.about-item::before {
    content: "";
    position: absolute;
    width: 16px;
    height: 16px;
    border-radius: 50px;
    left: -9px;
    top: 0;
    background: #fff;
    border: 2px solid var(--primary-color);
}
.colored-text{
    color: var(--primary-color);
}
body{
    font-family: 'Open Sans', sans-serif;
    margin: auto;
}
.component-body{
    margin: 10px;
}
hr{
    margin: 30px 0px;
}
.article{  
    text-align: left;
    display: inline-block;
    padding: 2rem;
    width: -webkit-fill-available;
}
h1{
    font-size: 2em;
}
.container{
    /* display:flex;
    flex-direction: column;
    justify-content: center;
    align-items: center; */
    margin: auto;
    max-width: 600px;
}
.container-about{
    max-width: 1140px;
    width: 100%;
    padding-right: 20px;
    padding-left: 20px;
    margin-right: auto;
    margin-left: auto;
}
.container-fluid {
    padding-left: 1rem;
    padding-right: 1rem;
}
.primary-link{
    text-decoration: none;
    background-color: var(--primary-color);
    color: white;
    border-radius: 0.5rem;
    padding: 0.5rem 1rem;
    display: inline-block;
    max-width: 140px;
    margin: auto;
    margin-top: 1rem;
}
.secondary-link{
    text-decoration: none;
    border: 1px solid var(--primary-color);
    color: var(--primary-color);
    border-radius: 0.5rem;
    padding: 0.5rem 1rem;
    display: inline-block;
    max-width: 140px;
    margin: auto;
    margin-top: 1rem;
}
.no-bullet{
    list-style: none;
    overflow-y: hidden;
}
.-inline li {
    display: inline;
    padding: 0.5rem;
}
.skills{
    padding: 0;
}
.navigation{
    background-color: var(--primary-color);
    color: white;
    padding: 1rem 1rem;
    border-bottom-left-radius: 1rem;
    z-index: 10;
    position: sticky;
    top: 0;
}
.navigation .brand-name{
    font-family: "Vibes";
    font-weight: bolder;
    font-size: 1.5rem;
}
.navigation ul{
    text-align: right;
}
.navigation li a{
    color:white;
    text-decoration: none;

}
.flex-about{
    display: flex;
    justify-content: space-evenly;
}
.active{
    font-weight: bold;
}
header {
    text-align: center;
}
header img{
    margin:auto;
    width: 80%;
    height: 40vh;
    display: block;
}
#fig-img{
    margin:auto;
    max-width: 100px;
    display: block;
}
header h3{
    color: var(--dark-gray);
}
.section {
    display: block;
    padding: 0.5rem 5rem 2rem;
    text-align: center;
}
.comp-article{
    background: white;
    padding: 1rem;
    border-radius: 1rem;
    margin: 1rem 0rem;
}
aside{
    float: right;
    background: var(--off-white);
}
.-ow{
    background-color: var(--off-white);  
}
.form{
    display: grid;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border-radius: 1rem;
    padding: 0.5rem;
    margin: auto;
    width: 50%;
    background: linear-gradient(to right bottom, rgba(212, 176, 247, 0.555),rgba(171, 55, 238, 0.103));
}
fieldset{
    border: none;
}
.no-flex{
    display: block;
}



/*Contact page*/

#connect{
    min-height: 30vh;
    color: white;
    background: var(--primary-color);
    padding-bottom: 2rem;
    text-align: center;
  }
  .contact-head{
    color: white;
    display: grid;
    place-items: center;
  }
  .contact-content{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
    width: 90%;
    margin: auto;
  }
  .fa{
    color: white;
    padding: 1rem;
    transform: scale(1.4);
    overflow-y:hidden;
  }
  .contact-socials{
    overflow-y: hidden;
    flex: 1 1 30rem;
  }
  .contact-socials a{
      text-decoration: none;
  }
/*media queries*/

@media screen and (max-width: 800px){
    .site-header{
        flex-wrap: wrap;
    }
    .col{
        padding: 0.5rem;
    }
    .-noflex{
        flex: none;
    }
    .container-fluid{
        display: flex;
        justify-content: space-between;
    }
    .hamburger{
        display: block;
        pointer-events:visible;
        cursor: pointer;
        z-index: 3;
        overflow-y: hidden;
      }
      .nav-items{
        position: fixed;
        width: 100%;
        height: 100vh;
        left: 100%;
        top: 0px;
        display: flex;
        flex-direction: column;
        justify-content: space-evenly;
        align-items: center;
        background: var(--primary-color);
        transition: transform 1s ease 0s;
        z-index: 2;
      }
      .show{
        transform: translateX(-100%);
      }
}

@media screen and (max-width: 670px){
    .col{
        padding: 2.5rem;
    }
}
@media screen and (max-width: 320px){
    .col{
        padding: 0.5rem;
    }
}

